--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<button type="button">Click Me!</button>
+<button type="button" onclick="alert('vape')">Fried</button>
+<button type="button" onclick="alert('no ur not, go hit ur vape')">Fine</button>
 </body>
 </html>
