--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Are You Fried? What Should You Do Next?</h1>
 <button type="button" onclick="alert('vape')">Fried</button>
 <button type="button" onclick="alert('no ur not, go hit ur vape')">Fine</button>
 </body>
