--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Are You Fried? What Should You Do Next?</h1>
 <button type="button" onclick="alert('vape')">Fried</button>
-<button type="button" onclick="alert('no ur not, go hit ur vape')">Fine</button>
+<button type="button" onclick="alert('no ur not, go hit ur vape silly')">Fine</button>
 </body>
 </html>
