--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Are You Fried? What Should You Do Next?</h1>
-<button type="button" onclick="alert('vape')">Fried</button>
-<button type="button" onclick="alert('no ur not, go hit ur vape silly')">Fine</button>
+<h1>Have you applied to any jobs today?</h1>
+<button type="button" onclick="alert('https://www.linkedin.com/jobs/')">No</button>
+<button type="button" onclick="alert('Apply for more at https://www.linkedin.com/jobs/')">Yes</button>
 </body>
 </html>
